--- a/1.html
+++ b/1.html
@@ -14,7 +14,7 @@
     <li> <a href="3.html">JavaScript</a></li>
   </ol>
 
-  <h2>HTML</h2>
+  <h2>HTML_단비안뇽</h2>
 
   <p>
   <a href="https://www.youtube.com/watch?v=V3pkC1hE-as&list=PLuHgQVnccGMDZP7FJ_ZsUrdCGH68ppvPb&index=14"
